fix: global search ui on mobile working.

--- a/components/Layout/Header/style.scss
+++ b/components/Layout/Header/style.scss
@@ -45,29 +45,29 @@
     }
   }
 
-  .form {
+  .search_form {
     position: relative;
 
     &__top {
       display: flex;
       flex-direction: row;
       width: 100%;
-      max-width: 200px;
-      padding-left: 5px;
-      background-color: $color-white;
+      max-width: 27px;
+      padding-left: 2px;
       @include border-radius(3px);
       transition: all 0.1s ease;
 
-      &__active {
-        max-width: 100%;
+      & > input,
+      & > .btn {
+        display: none;
       }
 
       > i {
-        margin-top: 3px;
-        color: $color-light;
+        margin: 3px;
+        color: $color-white;
       }
 
-      &__control {
+      & > input {
         width: 100%;
         height: 30px;
         padding: 5px 10px;
@@ -82,6 +82,23 @@
       > .btn {
         color: $color-gray-light;
         font-size: rem(14);
+      }
+
+      &__active {
+        max-width: 100%;
+        background-color: $color-white;
+        > i {
+          display: none;
+        }
+
+        > input,
+        > .btn {
+          display: block;
+        }
+
+        > i {
+          color: $color-light;
+        }
       }
     }
 
@@ -247,6 +264,91 @@
         }
         100% {
           opacity: 0;
+        }
+      }
+    }
+
+    .search_form {
+      position: relative;
+
+      &__top {
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        max-width: 200px;
+        padding-left: 5px;
+        background-color: $color-white;
+        @include border-radius(3px);
+        transition: all 0.1s ease;
+
+        &__active {
+          max-width: 100%;
+        }
+
+        > i {
+          margin-top: 3px;
+          color: $color-light;
+        }
+
+        &__control {
+          width: 100%;
+          height: 30px;
+          padding: 5px 10px;
+          background-color: transparent;
+          border: 0 none;
+          $color: $base-color;
+          font-size: rem(14);
+          line-height: 30px;
+          outline: none;
+        }
+
+        > .btn {
+          color: $color-gray-light;
+          font-size: rem(14);
+        }
+      }
+
+      &__result {
+        display: none;
+        position: absolute;
+        z-index: 1;
+        width: 100%;
+        margin-top: 1px;
+        @include box-shadow();
+        @include border-radius(3px);
+        border-bottom: 5px solid $border-color;
+
+        &__show {
+          display: block;
+        }
+
+        > ul,
+        li {
+          margin: 0;
+          padding: 0;
+          list-style-type: none;
+        }
+        ul {
+          padding-bottom: 10px;
+
+          &:nth-child(1) {
+            border-bottom: 1px solid $color-lighter;
+          }
+          li {
+            a,
+            span {
+              display: block;
+              padding: 4px 10px 4px 20px;
+              color: $base-color;
+              font-size: rem(13);
+            }
+            span {
+              padding-bottom: 0;
+              color: $color-gray-light;
+              font-size: rem(12);
+              font-weight: $font-weight-bold;
+            }
+          }
         }
       }
     }
